--- a/package.json
+++ b/package.json
@@ -5,15 +5,45 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest -u --runInBand --verbose --detectOpenHandles --forceExit",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "test:coverage": "yarn test --coverage"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.6.1",
+    "@types/jest": "^26.0.0",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/styled-components": "^5.1.0",
     "expo": "~37.0.3",
+    "expo-font": "^8.1.1",
+    "expo-splash-screen": "^0.2.3",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "jest-expo": "^37.0.0",
+    "prettier": "^2.0.5",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dotenv": "^0.2.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "<rootDir>/__tests__/config/jest.setup.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/__tests__/config"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
